--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div>
-            <img src="images/landing.png" alt="Landing Image">
+            <img src="https://static.promediateknologi.id/crop/0x0:0x0/0x0/webp/photo/p2/01/2024/10/09/STUDIO-GHIBLI-FILM-TERLARIS-3525538156.jpg" alt="Gambar logo studio Ghibli">
         </div>
     </section>
     <section id="about">
